# ido-static-recomp

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  recomp.cpp  rule.bzl
ido/5.3/usr/lib/: BUILD.bazel
ido/5.3/usr/lib/c++/: BUILD.bazel
